# my_language

./: .gitignore  CMakeLists.txt  README.md  example.ma  main.c  main.c~
src/: append.c~  append.h  append.h~  calcul.c  calcul.c~  calcul.h  calcul.h~  condition.c  condition.c~  condition.h  condition.h~  finder.c  finder.c~  finder.h  finder.h~  for.c  for.h  lambda.c  lambda.c~  lambda.h  max.c  max.c~  max.h  max.h~  mean.c  mean.h  min.c  min.c~  min.h  parser.c  parser.c~  parser.h  parser.h~  pipeline.c  pipeline.c~  pipeline.h  pipeline.h~  pop.c~  pop.h  pop.h~  (+20 more)
test/: array.ma  comment.ma  float.ma  game.ma  math.ma  print.ma  simple_array.ma  string.ma  test1.ma  test2.ma  test3.ma  test_min_max_sort.ma
